Corrections in tests